<resources>
    <string name="app_name">Synopsis</string>
    <string name="tag_line">YOUR IDENTITY HAS A VALUE</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name (Surname)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="alternate_mobile">Alternate Mobile Number</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agreement">I agree to the terms and conditions</string>
    <string name="agreement2">I agree</string>
    <string name="facebook_app_id">1251731434839457</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="action_settings">Settings</string>

    <string name="ReferalIdoptional"> Referror Email Id </string>



    <string name="basic_info"> Basic Information </string>
    Date_of_birth<string name="date_of_birth"> Date of birth</string>
    <string name="Select_date">Select date </string>

    <string name="Gender"> Gender</string>
    <string name="Female">Female </string>
    <string name="Male">Male </string>
    <string name="Please_enter_your_city">Please enter your City</string>
    <string name="Submit"> Submit</string>


    <string name="Company_Name">Company Name* </string>
    <string name="Contact_Person"> Contact Person*</string>
    <string name="Company_Email">Company Email* </string>
    <string name="Designation">Designation* </string>
    <string name="Mobile_Landline_No"> Mobile/Landline No*</string>
    <string name="No_of_employees">No of employees* </string>
    <string name="Interested_in">Interested in:* </string>
    <string name="Company_type"> Company type:</string>

  <string name="First_name_and_Middle_name">First name  </string>
    <string name="middle_name">Middle name  </string>

    <string name="Register_for_free">Register for free </string>
    <string name="already_registered">Already Registered? Click Here </string>
    <string name="default_countrycode">+91 </string>

   <!--
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>
    <string name=""> </string>


-->



    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_code">ISD code</string>
</resources>
